--- a/index.html
+++ b/index.html
@@ -13,24 +13,51 @@
       <a href="#">Receitas</a>
    </header>
    <section class="presentation-container">
-      <div class="presentation-text">
+      <div class="presentation-message">
          <h1>As melhores receitas</h1>
          <p>
             Aprenda a contruir os melhores pratos, com receitas
             criadas por profissionais do mundo inteiro.
          </p>
       </div>
-      <img src="" alt="">
+      <img src="./public/assets/chef.png" alt="chef figure">
    </section>
-   <div>
+   <section class="most-accessed">
       <h2>Mais acessadas</h2>
-      <ul class="cards">
-         <li class="card">
-            <img src="./public/assets/burger.png" alt="">
-            <a href="#">Triplo bacon burger</a>
-            <p>por: Jorge Relato</p>
-         </li>
-      </ul>
-   </div>
+      <div class="cards">
+         <ul>
+            <li class="card">
+               <img src="./public/assets/burger.png" alt="">
+               <a href="#">Triplo bacon burger</a>
+               <p>por: Jorge Relato</p>
+            </li>
+            <li class="card">
+               <img src="./public/assets/pizza.png" alt="">
+               <a href="#">Pizza 4 estações</a>
+               <p>por: Fabiana Melo</p>
+            </li>
+            <li class="card">
+               <img src="./public/assets/espaguete.png" alt="">
+               <a href="#">Espaguete ao alho</a>
+               <p>por: Júlia Kinoto</p>
+            </li>
+            <li class="card">
+               <img src="./public/assets/lasanha.png" alt="">
+               <a href="#">Lasanha mac n' cheese</a>
+               <p>por: Juliano Vieira</p>
+            </li>
+            <li class="card">
+               <img src="./public/assets/doce.png" alt="">
+               <a href="#">Docinhos pão-do-céu</a>
+               <p>por: Ricardo Golvea</p>
+            </li>
+            <li class="card">
+               <img src="./public/assets/asinhas.png" alt="">
+               <a href="#">Asinhas de frango ao barbecue</a>
+               <p>por: Vania Steroski</p>
+            </li>
+         </ul>
+      </div>
+   </section>
 </body>
 </html>
